<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_format_list_numbered_black_18dp"
            android:title="@string/nav_orders" />

        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/ic_schedule_black_18dp"
            android:title="@string/nav_tables" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_18dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_18dp"
            android:title="@string/nav_menu" />

    </group>



</menu>
