<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.marti.laboratorio2.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include layout="@layout/toolbar"></include>

        </android.support.design.widget.AppBarLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.marti.laboratorio2.MainActivity"
            tools:showIn="@layout/app_bar_main"
            android:orientation="vertical">




            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="0dp"
                android:onClick="selectImage"
                android:contentDescription="@string/alertTitle"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:isScrollContainer="false"
                    android:fillViewport="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <EditText
                            android:paddingTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editName"
                            android:hint="@string/name"
                            android:textSize="20sp"
                            android:textStyle="italic"/>

                        <EditText
                            android:paddingTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/quantity"
                            android:id="@+id/editQuantity"
                            android:textSize="20sp"
                            android:textStyle="italic"/>

                        <EditText
                            android:paddingTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editDescription"
                            android:hint="@string/description"
                            android:textSize="20sp"
                            android:textStyle="italic"/>
                        <EditText
                            android:paddingTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editPrice"
                            android:textSize="20sp"
                            android:hint="@string/price"
                            android:textStyle="italic"
                            />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ok"
                                android:onClick="aggiungi" />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cancel"
                                android:onClick="nonAggiungere" />

                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>



        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />



</android.support.v4.widget.DrawerLayout>
